--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
     </div>
     <div class="digital-clock">
       <div class="digital-clock__box">
-        <div class="digital-clock__outter-clock">
-          <div class="digital-clock__inner-clock">
+        <div class="digital-clock__inner-clock">
+          <div class="digital-clock__left">
+            <div class="digital-clock__time"></div>
+            <div class="digital-clock__day"></div>
+          </div>
+          <div class="digital-clock__right">
             <div class="digital-clock__am">
               <div class="digital-clock__am-dot"></div>
             </div>
             <div class="digital-clock__pm">
               <div class="digital-clock__pm-dot"></div>
             </div>
-            <div class="digital-clock__time"></div>
-            <div class="digital-clock__day"></div>
           </div>
         </div>
-        <div class="digital-clock__leg-left"></div>
-        <div class="digital-clock__leg-right"></div>
       </div>
     </div>
     <div class="alert">
