--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="analogue-clock">
+    <div class="analogue-clock" style="display: flex">
       <div class="analogue-clock__clock">
         <div class="analogue-clock__hour">
           <div class="analogue-clock__hr" id="hr"></div>
@@ -21,7 +21,7 @@
         </div>
       </div>
     </div>
-    <div class="digital-clock">
+    <div class="digital-clock" style="display: flex">
       <div class="digital-clock__box">
         <div class="digital-clock__inner-clock">
           <div class="digital-clock__left">
@@ -39,7 +39,7 @@
         </div>
       </div>
     </div>
-    <div class="alert">
+    <div class="alert" style="display: flex">
       <div class="alert__container">
         <div class="alert__header">EMERGENCY</div>
         <div class="alert__middle">
